# FH-OOE-Hagenberg-C

UE01/: .01-Neuhold-Michael.zip.icloud  Ausarbeitung.docx
UE01/nova/: nova
UE01/poly/: poly
UE02/: .02-Neuhold-Michael.zip.icloud  .Ausarbeitung.docx.icloud  Ausarbeitung.docx
UE02/gross/: gross  gross 2  gross.c  tempCodeRunnerFile.c  tmp  tmp.c
UE02/hamming/: hamming_sequence  hamming_sequence.c
UE02/sort/: sort  sort.c  sort.h
UE03/: .03-Neuhold-Michael.zip.icloud  .Ausarbeitung.docx.icloud  .Ausarbeitung.pdf.icloud  Ausarbeitung.docx  C-makefile  CMakeLists.txt
UE03/buildPipes/: CMakeCache.txt  Makefile  cmake_install.cmake
UE03/buildSudoku/: Makefile  (+2 more)
UE04/: Ausarbeitung.docx  CMakeLists.txt  ~$sarbeitung.docx
UE05/: Ausarbeitung.docx
UE05/05-Neuhold-Michael/src/graph/: CMakeLists.txt  io_lib.h  test.c
UE05/05-Neuhold-Michael/src/graph/graph_list/: edge_list.h  graph_list.c  graph_list.h  types.h
UE05/05-Neuhold-Michael/src/graph/graph_matrix/: graph_matrix.c  types.h
UE05/graphs/: CMakeLists.txt  graph_includer.h  graph_selector.h  io_lib.c  test.c  test.h
UE05/graphs/graph_list/: edge_list.c  edge_list.h  graph_list.c  graph_list.h  types.h
UE05/graphs/graph_matrix/: graph_matrix.c  graph_matrix.h  types.h
UE05/graphs/src/: graph_includer.h  graph_selector.h  test.c
UE05/graphs/src/graph_list/: graph_list.c  graph_list.h
UE05/graphs/src/graph_matrix/: graph_matrix.c  graph_matrix.h
UE07/: Ausarbeitung.docx
UE08/: .08-Neuhold-Michael.zip.icloud  .Ausarbeitung.docx.icloud  .Ausarbeitung.pdf.icloud
UE10/: Ausarbeitung.docx
(+251 files in other folders)
